patch for Patrick